style: fix z-index issue

--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -86,6 +86,7 @@
         -webkit-animation-delay: 0.20s;
         animation: slide 0.5s forwards;
         animation-delay: 0.20s;
+        z-index: 1;
     }
 }
 
